@@ -1,4 +1,8 @@
 2010-03-26  Dustin J. Mitchell <dustin@zmanda.com>
+	* application-src/ampgsql.pl: don't die when gnutar issues non-fatal
+	  errors, e.g., "file changed as we read it"
+
+2010-03-26  Dustin J. Mitchell <dustin@zmanda.com>
 	* installcheck/amrecover.pl: fix stupid error in installcheck
 
 2010-03-26  Dustin J. Mitchell <dustin@zmanda.com>
